--- a/app/src/main/res/layout/activity_play_quiz.xml
+++ b/app/src/main/res/layout/activity_play_quiz.xml
@@ -6,26 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".playQuiz">
 
-    <TextView
-        android:id="@+id/whichAlternative"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:text="Which alternative is correct?"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/textView3"
+        android:id="@+id/scoreCount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
-        android:text="Score:"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="250dp"
+        android:text="Score: 0/10"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/whichAlternative" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:progress="0"/>
 
     <TextView
         android:id="@+id/questionAsked"
@@ -36,8 +28,7 @@
         android:textSize="25sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/whichAlternative" />
+        app:layout_constraintStart_toStartOf="parent"/>
 
     <TextView
         android:id="@+id/answer1"
