--- a/app/src/main/res/layout/activity_play_quiz.xml
+++ b/app/src/main/res/layout/activity_play_quiz.xml
@@ -16,8 +16,7 @@
         android:text="Score: 0/10"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:progress="0"/>
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <TextView
         android:id="@+id/questionAsked"
