--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".playQuiz">
+    tools:context=".PlayActivity">
 
 
     <TextView
@@ -35,6 +35,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-100dp"
         android:layout_marginEnd="200dp"
+        android:tag="1"
         android:text="TextView"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -48,6 +49,7 @@
         android:layout_marginEnd="200dp"
         android:layout_marginBottom="100dp"
         android:text="TextView"
+        android:tag="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -59,6 +61,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-100dp"
         android:text="TextView"
+        android:tag="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/answer1"
@@ -70,6 +73,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-100dp"
         android:text="TextView"
+        android:tag="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/answer1"
