design and buttons

--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -2,6 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/gradientLayout"
+    android:background="@drawable/gradient_animation"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".PlayActivity">
@@ -37,6 +39,8 @@
         android:layout_marginEnd="200dp"
         android:tag="1"
         android:text="TextView"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -49,6 +53,8 @@
         android:layout_marginEnd="200dp"
         android:layout_marginBottom="100dp"
         android:text="TextView"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:tag="2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,6 +67,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-100dp"
         android:text="TextView"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:tag="3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -73,6 +81,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="-100dp"
         android:text="TextView"
+        android:background="@drawable/textview_border"
+        android:padding="10dp"
         android:tag="4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
