--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="colorGradientStart">#28068f</color>
+    <color name="colorGradientCenter">#FFD700</color>
+    <color name="colorGradientEnd">#28068f</color>
+
+    <color name="colorBorder">#2b2b2b</color>
 </resources>
