--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -68,6 +68,7 @@
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:tag="1"
+       android:background="@color/onClickGreen"
        app:layout_constraintBottom_toTopOf="@+id/cardAnswer3"
        app:layout_constraintEnd_toStartOf="@+id/cardAnswer2"
        app:layout_constraintHorizontal_bias="0.5"
