--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -2,10 +2,9 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/playBackground"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/gradient_start"
+    android:background="#02084f"
     tools:context=".PlayActivity">
 
 
@@ -52,7 +51,7 @@
       android:id="@+id/mainCardView"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
-      android:background="#303030">
+      android:background="#02084f">
 
    <TextView
        android:id="@+id/questionAsked"
@@ -87,6 +86,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="TextView"
+         android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
@@ -114,6 +114,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="TextView"
+         android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
@@ -141,6 +142,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="TextView"
+         android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
@@ -168,6 +170,7 @@
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="TextView"
+         android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
          app:layout_constraintStart_toStartOf="parent"
