--- a/app/src/main/res/layout/activity_win.xml
+++ b/app/src/main/res/layout/activity_win.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/gradientLayout"
-    android:background="@drawable/gradient_animation"
+    android:background="#02084f"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".WinActivity">
