--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="30dp"
         android:layout_marginBottom="-150dp"
         android:text="Who wants to be a millionaire"
+        android:textColor="#FFFFFF"
         android:textSize="27sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/playButton"
