--- a/app/src/main/res/layout/activity_play_activity.xml
+++ b/app/src/main/res/layout/activity_play_activity.xml
@@ -14,7 +14,7 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="20dp"
      android:layout_marginTop="56dp"
-     android:text="0/10"
+     android:text="@string/strScore"
      android:textColor="#FFFFFF"
      android:textSize="20sp"
      android:textStyle="bold"
@@ -29,7 +29,7 @@
      android:layout_height="wrap_content"
      android:layout_marginStart="30dp"
      android:layout_marginTop="44dp"
-     android:text="Time Remaining"
+     android:text="@string/strTime"
      android:textColor="#FFFFFF"
      android:textSize="34sp"
      android:textStyle="bold"
@@ -60,7 +60,7 @@
        android:id="@+id/questionAsked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:text="Question"
+       android:text="@string/strQuestion"
        android:textColor="@color/white"
        android:textSize="19sp"
        android:textStyle="bold"
@@ -89,7 +89,7 @@
          android:id="@+id/answer1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="TextView"
+         android:text="@string/strAnswer1"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
@@ -118,7 +118,7 @@
          android:id="@+id/answer2"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="TextView"
+         android:text="@string/strAnswer2"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
@@ -147,7 +147,7 @@
          android:id="@+id/answer3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="TextView"
+         android:text="@string/strAnswer3"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
@@ -176,7 +176,7 @@
          android:id="@+id/answer4"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
-         android:text="TextView"
+         android:text="@string/strAnswer4"
          android:textStyle="bold"
          app:layout_constraintBottom_toBottomOf="parent"
          app:layout_constraintEnd_toEndOf="parent"
@@ -215,10 +215,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/txtPrize1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$100"
+        android:text="@string/strPrize1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -243,10 +243,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtPrize2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$50 000"
+        android:text="@string/strPrize2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -270,10 +270,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView10"
+        android:id="@+id/txtPrize3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$75 000"
+        android:text="@string/strPrize3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -297,10 +297,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView13"
+        android:id="@+id/txtPrize4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$100 000"
+        android:text="@string/strPrize4"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -325,10 +325,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView9"
+        android:id="@+id/txtPrize8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$600 000"
+        android:text="@string/strPrize8"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -352,10 +352,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView12"
+        android:id="@+id/txtPrize9"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$800 000"
+        android:text="@string/strPrize9"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -380,10 +380,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView15"
+        android:id="@+id/txtPrize10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$1 000 000"
+        android:text="@string/strPrize10"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -410,10 +410,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/txtPrize5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$200 000"
+        android:text="@string/strPrize5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -437,10 +437,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView11"
+        android:id="@+id/txtPrize6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$300 000"
+        android:text="@string/strPrize6"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -464,10 +464,10 @@
        android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView14"
+        android:id="@+id/txtPrize7"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="$400 000"
+        android:text="@string/strPrize7"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
