--- a/app/src/main/res/layout/activity_fail.xml
+++ b/app/src/main/res/layout/activity_fail.xml
@@ -10,8 +10,8 @@
         android:id="@+id/failText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="You were too greedy.."
-        android:textSize="40sp"
+        android:text="You thought you knew it all.."
+        android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="100dp"
-        android:text="Try your luck again"
+        android:text="Try again"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/restartButton"
